@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2007-12-09 07:23:17 $ $Revision: 1.13 $
+\  $Date: 2008-02-20 19:30:05 $ $Revision: 1.14 $
 \
 \ ==============================================================================
 
@@ -84,6 +84,11 @@ end-structure
   dup tos-sync
       tos>msc nil!
   
+;
+
+
+: tos-(free)       ( tos -- = Free the tos data from the heap )
+  str-(free)
 ;
 
 
